--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,38 @@
+
+
+.subtext {
+    font-weight: 500;
+    font-style: italic;
+}
+
+.cityDate {
+    text-align: right;
+    /* color: #292826; */
+}
+
+.background {
+    border-color:#A1A1A1;
+    border-style:groove;
+    padding: 25px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    background-color: white;
+}
+
+.spacer {
+    margin: -25px;
+    padding: -25px
+}
+
+.experience {
+    background-color:#A1A1A1;
+    padding-left: 75px;
+    padding-top: 10px;
+    padding-right: 75px;
+    padding-bottom: 10px;
+}
+
+
 /* This class sets the custom style for the footers on this website */
 .footerStyle {
     text-align: center;
@@ -9,7 +44,7 @@
 /* This class sets the custom style for the forms on this website */
 .formStyle {
     color: Black;
-    background-color: lightgray;
+    background-color: #A1A1A1;
     }
 
 /* These classes set the custom style for images */
